--- a/frontend/our-app/src/App.css
+++ b/frontend/our-app/src/App.css
@@ -1,70 +1,38 @@
 .App {
   text-align: center;
-  scroll-behavior: smooth; 
-}
-nav {
-width: 100%;
-background: #262626;
-overflow: hidden;
-position: fixed;
-top: 0;
-    
 }
 
-
-
-
-ul{
-  padding: 0;
-  margin: 0;
-  list-style: none;
-
+.App-logo {
+  height: 40vmin;
+  pointer-events: none;
 }
 
-li{
-  float: left;
-}
-a{
-  padding: 20px;
-  width: 100px;
-  display: block;
-  text-decoration: none;
-  color: #fff;
-  text-transform: uppercase;
-  font-weight: bold;
+@media (prefers-reduced-motion: no-preference) {
+  .App-logo {
+    animation: App-logo-spin infinite 20s linear;
+  }
 }
 
-#section1{
-  height: 700px;
-  background: pink;
-  display: inline-block;
-  width: 100%;
+.App-header {
+  background-color: #282c34;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-size: calc(10px + 2vmin);
+  color: white;
 }
 
-#section2{
-  height: 700px;
-  background: yellow;
-  display: inline-block;
-  width: 100%;
+.App-link {
+  color: #61dafb;
 }
 
-#section3{
-  height: 700px;
-  background: pink;
-  display: inline-block;
-  width: 100%;
-}
-
-#section4{
-  height: 700px;
-  background: yellow;
-  display: inline-block;
-  width: 100%;
-}
-
-#section5{
-  height: 700px;
-  background: pink;
-  display: inline-block;
-  width: 100%;
+@keyframes App-logo-spin {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
 }
