--- a/frontend/our-app/public/css/style.css
+++ b/frontend/our-app/public/css/style.css
@@ -244,7 +244,7 @@ a:focus,
     display: table;
     width: 100%;
     padding: 0;
-    background: url(../img/intro-bg.jpg) center center no-repeat;
+    background: url(../img/orimg.jpeg) center center no-repeat;
     background-color: #e5e5e5;
     -webkit-background-size: cover;
     -moz-background-size: cover;
