--- a/frontend/our-app/public/css/style.css
+++ b/frontend/our-app/public/css/style.css
@@ -87,7 +87,7 @@ hr {
 /* Navigation */
 
 #menu {
-    padding: 15px;
+    padding: 0.8px;
     transition: all 0.8s;
 }
 
@@ -109,7 +109,7 @@ hr {
 #menu.navbar-default .navbar-nav>li>a {
     font-family: 'Lato', sans-serif;
     text-transform: uppercase;
-    color: rgb(201, 167, 17);
+    color: rgb(228, 225, 213);
     font-size: 15px;
     font-weight: 400;
     padding: 8px 2px;
@@ -244,12 +244,17 @@ a:focus,
 .intro {
     display: table;
     width: 100%;
+    height: 100%;
     padding: 0;
+    /* overflow: hidden;     */
     background: url(../img/orimg.jpeg) center center no-repeat;
     background-color: #e5e5e5;
     -webkit-background-size: cover;
     -moz-background-size: cover;
-    background-size: cover;
+    /* background-size: cover; */
+    /* background-repeat: no-repeat; */
+    background-position: top;
+    background-size: 100% 100%;
     -o-background-size: cover;
 }
 
